refactor(client): 优化签名逻辑并修复测试相关问题
- 移除了 ApiSignatureRequestInterceptor 中的 SIGNE_CONTENT_TYPES 列表，不再根据 Content-Type 决定是否签名
- 修改了 RequestSignFilterTests 中的参数获取方式，使用 values.getFirst() 代替 values.get(0)
- 修复了测试中 header 添加方式，确保正确添加第一个值